# house_room_classifier

./: README.md  model_training.ipynb  pyproject.toml
data/: README.dataset.txt  README.roboflow.txt
house_room_classifier/data/: preprocessing.py
house_room_classifier/data/__pycache__/: data_exploration.py  preprocessing.py
house_room_classifier/models/: model_architectures.py  room_classifier_model.py
house_room_classifier/utils/: metrics-script_gen.py  visualization-script_gen.py  visualization_data.py
notebooks/: model_training.ipynb  predictions.ipynb  test.ipynb
scripts/: bayesian_tunning.py  data_exploring.py  evaluate-model-script_gen.py  evaluate_model.py  pretrain_bayesian_tunning.py  train_model.py  train_model_resnet.py  tuning.py  visualize_predictions.py
tests/: test-model_gen.py  test-preprocessing_gen.py
