[tool.poetry]
name = "house-room-classifier"
version = "0.1.0"
description = ""
authors = ["Kida de Morais Aly <kidademoraisaly@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pandas = "^2.2.3"
matplotlib = "^3.9.3"
numpy = "<2.0"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"



[tool.poetry.scripts]
train_model = "scripts.train_model:main"
image_loading="scripts.data_exploring:main"

